# embedded_rust_experimental

./: Cargo.toml  LICENSE  README.md  memory.x  openocd.gdb
src/: main.rs
