[package]
name = "rusty-clock"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[workspace]

[dependencies]
stm32f4xx-hal = { version = "0.3", features = ["rt", "stm32f429" ] }
cortex-m = "0.5"
#cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-rtfm = "0.4.0"
panic-semihosting = "0.5"
embedded-hal = "0.2.1"

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
