[package]
name = "embedded_rust_experiment"
version = "0.1.0"
authors = ["guenther stangassinger <guenther.stangassinger@gmx.de>"]
edition = "2018"

[workspace]

[dependencies]
stm32f4xx-hal = { version = "0.5", features = ["rt", "stm32f429" ] }
cortex-m = "0.6.0"
## cortex-m-rt = { version = "0.6.9", features = ["device"] }
cortex-m-rtfm = "0.4.3"
panic-semihosting = "0.5.2"
embedded-hal = "0.2.1"

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
